syntax = "proto3";

// The request message containing the patient's vital signs.
// For the sake of simplicity, we only cover a few vital signs,
// and for Blood Pressure, we assume to have only the systolic (top value)
message VitalSigns {
  int32 heartRate = 1;
  int32 bloodPressure = 2;
  int32 temperature = 3;
  string deviceId = 4;
  double timestampUnix = 5;
}

// The response message
message VitalSignsResponse {
  string message = 1;
}

message RegisterDeviceRequest {
  string deviceId = 1;
}

message RegisterDeviceResponse {
  string message = 1;
}

message SubscribeDataRequest {
  string subscriberId = 1;
}

service VitalSignsService {
    // Register patient monitoring device in server
    rpc registerDevice (RegisterDeviceRequest) returns (RegisterDeviceResponse) {}
    // Sends vital signs data
    rpc publishData (VitalSigns) returns (VitalSignsResponse) {}
    // Register patient monitoring device in server
    rpc subscribeData (SubscribeDataRequest) returns (stream VitalSigns) {}
}